[gd_scene load_steps=3 format=3 uid="uid://wmnc0t03vevb"]

[ext_resource type="Texture2D" uid="uid://cmt2raf1ockmm" path="res://Art/Complete_GUI_Essential_Pack_Free_Version/01_Basic_Collection/01_Flat_Theme/Sprites/UI_Flat_Frame_01_Lite.png" id="2_ej0p7"]
[ext_resource type="Script" path="res://Scripts/Components/nine_patch_rect_button.gd" id="2_wmrys"]

[node name="BookPanel" type="VBoxContainer"]
custom_minimum_size = Vector2(2.08165e-12, 36)
offset_right = 100.0
offset_bottom = 36.0
size_flags_horizontal = 3
mouse_filter = 2

[node name="NinePatchRectButton" type="NinePatchRect" parent="."]
custom_minimum_size = Vector2(2.08165e-12, 36)
layout_mode = 2
mouse_filter = 0
texture = ExtResource("2_ej0p7")
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
script = ExtResource("2_wmrys")

[connection signal="gui_input" from="NinePatchRectButton" to="NinePatchRectButton" method="_on_gui_input"]
[connection signal="mouse_entered" from="NinePatchRectButton" to="NinePatchRectButton" method="_on_mouse_entered"]
[connection signal="mouse_exited" from="NinePatchRectButton" to="NinePatchRectButton" method="_on_mouse_exited"]
